; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_kevent_pty.c_pty_master.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_kevent_pty.c_pty_master.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STDIN_FILENO = common dso_local global i32 0, align 4
@TIMEOUT_SECS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @pty_master to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pty_master() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  %3 = call i64 (...) @fork()
  store i64 %3, i64* %1, align 8
  %4 = load i64, i64* %1, align 8
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = call i32 (...) @child_tty_client()
  br label %8

8:                                                ; preds = %6, %0
  %9 = load i64, i64* %1, align 8
  %10 = load i64, i64* %1, align 8
  %11 = call i32 @setpgid(i64 %9, i64 %10)
  store i32 %11, i32* %2, align 4
  %12 = load i32, i32* %2, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %8
  %15 = call i32 @exit(i32 1) #3
  unreachable

16:                                               ; preds = %8
  %17 = load i32, i32* @STDIN_FILENO, align 4
  %18 = load i64, i64* %1, align 8
  %19 = call i32 @tcsetpgrp(i32 %17, i64 %18)
  store i32 %19, i32* %2, align 4
  %20 = load i32, i32* %2, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %16
  %23 = call i32 @exit(i32 1) #3
  unreachable

24:                                               ; preds = %16
  %25 = load i32, i32* @TIMEOUT_SECS, align 4
  %26 = call i32 @sleep(i32 %25)
  %27 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i64 @fork(...) #1

declare dso_local i32 @child_tty_client(...) #1

declare dso_local i32 @setpgid(i64, i64) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @tcsetpgrp(i32, i64) #1

declare dso_local i32 @sleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
